# PCL-Kinect

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile_commands.json  git.sh  openni_grabber.cpp  openni_grabber_bench.cpp  openni_grabber_beta.cpp  test_pcd_rgba_compressed.pcd  test_pcd_rgba_ibm_1.pcd  test_pcd_rgba_ibm_2.pcd  test_pcd_rgba_ibm_3.pcd  test_pcd_rgba_inside_1.pcd  test_pcd_rgba_inside_2.pcd  test_pcd_rgba_inside_3.pcd  test_pcd_rgba_outside_1.pcd  test_pcd_rgba_outside_2.pcd  test_pcd_rgba_outside_3.pcd
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
